Ignore source css and js in phploy.ini

--- a/phploy.ini
+++ b/phploy.ini
@@ -2,3 +2,5 @@
 quickmode = sftp://username@example.com
 path = /remote/path/here
 privkey = '~/.ssh/id_rsa'
+exclude[] = 'app/frontend/css/*'
+exclude[] = 'app/frontend/js/*'
