--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -1,5 +1,10 @@
 RewriteEngine on
 
+# Handle subdomain
+# NOTE: place .htaccess inside subdomain folder (otherwise it will not work)
+# RewriteCond %{HTTP_HOST} ^subdomain1\.domain\.com$ [NC]
+# RewriteRule ^(.*)$ /subdomains/subdomain1/$1 [L]
+
 # Remove WWW
 # RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
 # RewriteRule ^ http://%1%{REQUEST_URI} [R=301,L]
@@ -14,4 +19,4 @@ RewriteEngine on
 
 # Handle front controller
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^ index.php [QSA,L]
+RewriteRule ^ index.php [L]
