--- a/phploy.ini
+++ b/phploy.ini
@@ -2,5 +2,4 @@
 quickmode = sftp://username@example.com
 path = /remote/path/here
 privkey = '~/.ssh/id_rsa'
-exclude[] = 'app/frontend/css/*'
-exclude[] = 'app/frontend/js/*'
+exclude[] = 'frontend/*'
